add logrus and swagger
